feat: test against different platform with different Java distributions (#9169)
@coderabbitai: ignore







<!-- This is an auto-generated comment: release notes by OSS CodeRabbit
-->
### Summary by CodeRabbit

Release Notes:

- New Feature: Updated the GitHub Actions workflow to use JDK 17 with
Oracle distribution and introduced a matrix strategy for testing against
different architectures and Java versions.
- Refactor: Removed the `-XX:MaxPermSize=4096m` option from the Gradle
configuration and added the `-XX:+UseParallelGC` option to enable
parallel garbage collection.
- Refactor: Removed the `ALTERNATIVE_JRE_PATH` option from the
backend-server configuration in an XML file.
- Refactor: Modified the build configuration files, plugins, and
dependencies in various modules.
- Refactor: Changed the plugin ID from `'java'` to `'java-library'` in
the core module.
- Refactor: Added the `testing.java-conventions` plugin to the project
configuration in multiple starter modules.
- Refactor: Introduced new interfaces and extended existing interfaces
in the template service module.
- Refactor: Implemented a new class `TemplateAlbumRelServiceImpl` that
extends the `ITemplateAlbumRelService` interface.
- Refactor: Modified the `TemplateAlbumServiceImpl` class to use a
service implementation provided by the `mybatis-plus` library.

These changes improve the build process, compatibility, and
maintainability of the codebase without introducing any user-visible
features or bug fixes.
<!-- end of auto-generated comment: release notes by OSS CodeRabbit -->